[project]
name = "example_package_hong02jp"
version = "0.0.1"
authors = [
  { name="HongJungPyo", email="hong02jp@gmail.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/hong02jp/packaging_tutorial"
Issues = "https://github.com/hong02jp/packaging_tutorial/issues"
